--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "clsx": "^2.1.1",
     "embla-carousel-autoplay": "^8.5.2",
     "embla-carousel-react": "^8.5.2",
+    "framer-motion": "^12.4.10",
     "install": "^0.13.0",
     "lucide-react": "^0.477.0",
     "npm": "^11.2.0",
