Add new logo to project

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,10 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+public/img.png
+public/img.png
+public/logo-dark.png
+public/logo.png
+public/vite.svg
+public/banner.jpeg
+public/banner.jpeg
