--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,8 @@
         "multer": "^1.4.5-lts.1",
         "passport": "^0.7.0",
         "passport-google-oauth20": "^2.0.0",
-        "pg": "^8.14.0"
+        "pg": "^8.14.0",
+        "react-icons": "^5.5.0"
     },
     "devDependencies": {
         "nodemon": "^3.1.9"
