--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "pg": "^8.13.3",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
+        "react-icons": "^5.5.0",
         "react-router-dom": "^6.26.0",
         "tailwind-merge": "^3.0.2",
         "tailwindcss-animate": "^1.0.7",
